<resources>
    <string name="app_name">Pogoda</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="humidity">Wilgotność powietrza:</string>
    <string name="exaple_text_50">50</string>
    <string name="symbol_percent">%</string>
    <string name="precipIntencity_description">Intensywność opadów</string>
    <string name="percipIntensity_description">Prawdopodobieństwo opadów</string>
    <string name="humidity_description">Wilgotność powietrza</string>
    <string name="pressure_description">Ciśnienie atmosferyczne</string>
    <string name="temperature_description">Temperatura</string>
    <string name="cloudCover_description">Zachmurzenie</string>
    <string name="windSpeed_description">Prędkość wiatru</string>
    <string name="visibility_description">Widoczność</string>
    <string name="symbol_celciusza">°C</string>
    <string name="symbol_hPa">hPa</string>
    <string name="symbol_km_h">km/h</string>
    <string name="symbol_mm">mm</string>
    <string name="weather_details_actionbar_title">Szczegółowe informację</string>
    <string name="example_text_city">Katowice</string>
    <string name="example_time">23:45</string>
    <string name="example_weather_summary">Słoneczny dzień</string>
    <string name="plus_icon">+</string>
    <string name="sunrise_stube_view">Wschód słońca</string>
    <string name="sunset_stube_view">Zachód słońca</string>
    <string name="moon_phrase_stube_view">Faza księżyca</string>
    <string name="temperature_max_stube_view">Temperatura maksymalna</string>
    <string name="temperature_min_stube_view">Temperatura minimalna</string>
    <string name="today_string">dzisiaj</string>
    <string name="tomorrow_string">jutro</string>
    <string name="details_menu_item">Szczegóły</string>
    <string name="hourly_menu_item">Prognoza godzinowa</string>
    <string name="daily_menu_item">Prognoza tygodniowa</string>
</resources>
