<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/daily_list_view_margin_10">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/circleImageView"
        android:src="@drawable/bg_temperature"
        android:layout_marginLeft="@dimen/temperature_circle_margin_50"/>

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignTop="@+id/circleImageView"
       android:layout_alignBottom="@+id/circleImageView"
       android:layout_alignLeft="@+id/circleImageView"
       android:layout_alignRight="@+id/circleImageView"
       android:gravity="center"
       android:orientation="horizontal">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/dailyTemperatureLabel"
           android:text="@string/exaple_text_50"
           style="@style/BlackBoldTextView25"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/symbol_celciusza"
           style="@style/BlackBoldTextView25"/>
   </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/circleImageView"
        android:id="@+id/weekDayLabel"
        android:text="poniedziałek"
        android:layout_marginTop="@dimen/daily_list_view_marginTop_25"
        android:layout_marginLeft="@dimen/daily_list_view_margin_10"
        style="@style/WhiteItalicTextView15"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/daily_list_view_margin_10"
        android:layout_marginLeft="@dimen/daily_list_view_margin_10"
        android:id="@+id/showDailyDetails"
        android:text="@string/plus_icon"
        android:background="@android:color/transparent"
        style="@style/WhiteItalicTextView30"/>

    <ViewStub
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/circleImageView"
        android:id="@+id/stub_details"
        android:inflatedId="@+id/panel_details"
        android:layout="@layout/stube_layout_daily_details"/>

</RelativeLayout>